--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  select_form_field: ^2.2.0
   path_provider: ^2.0.11
 
 dev_dependencies:
