--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   motion_sensors: ^0.1.0
   rxdart: ^0.27.7
   flutter_sms: ^2.3.3
+  esense_flutter: ^0.4.3
 
 dev_dependencies:
   flutter_test:
