--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   rxdart: ^0.27.7
   flutter_sms: ^2.3.3
   esense_flutter: ^0.4.3
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
